k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: DOCKERHUB_USERNAME/banking-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
